Styles - Fix wrong height of CodeMirror container

--- a/src/app/pages/home/components/page-editor.less
+++ b/src/app/pages/home/components/page-editor.less
@@ -1,4 +1,4 @@
 .CodeMirror-scroll {
-  height: calc(100vh - 155px);
+  height: calc(100vh - 160px);
 }
 
